--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,8 @@ click==7.1.2
 cssselect2==0.6.0
 defusedxml==0.7.1
 Django==4.0.5
+django-countries==7.3.2
+django-environ==0.9.0
 docker==4.3.1
 dockerpty==0.4.1
 docopt==0.6.2
