--- a/coffee_shop/.env.example
+++ b/coffee_shop/.env.example
@@ -1,4 +1,4 @@
-DEBUG=False
-SECRET_KEY='w#&89a_#djs3t-w(zw#&hc+bw@mm5jk#bduh&xpf2z6952lmux'
-EMAIL_HOST_USER='myemail@gmail.com'
-EMAIL_HOST_PASSWORD='kdsfhalskfeiifj'
+DEBUG=True
+SECRET_KEY=<your_secret_key>
+EMAIL_HOST_USER=<your_email_host_user>
+EMAIL_HOST_PASSWORD=<your_email_host_password>
