--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,7 +16,7 @@ repos:
     rev: 5.0.4
     hooks:
     - id: flake8
-      exclude: (migrations/|models.py)
+      exclude: (migrations/)
 -   repo: https://github.com/pycqa/isort
     rev: 5.10.1
     hooks:
