--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,13 +17,15 @@ services:
 
   db:
     image: postgres
+    volumes:
+      - .:/var/lib/postgresql
     ports:
       - 5432:5432
     environment:
       POSTGRES_USER: ${SQL_USER}
       POSTGRES_PASSWORD: ${SQL_PASSWORD}
       POSTGRES_DB: shop_db
-
+      
   # Celery worker
   worker:
     build:
